@@ -1,22 +1,0 @@
-/* This file is part of gpib-utils.
-   For details, see http://sourceforge.net/projects/gpib-utils.
-
-   Copyright (C) 2007 Jim Garlick <garlick.jim@gmail.com>
-
-   gpib-utils is free software; you can redistribute it and/or modify
-   it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 2 of the License, or
-   (at your option) any later version.
-
-   gpib-utils is distributed in the hope that it will be useful,
-   but WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-   GNU General Public License for more details.
-
-   You should have received a copy of the GNU General Public License
-   along with gpib-utils; if not, write to the Free Software Foundation, 
-   Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA */
-
-/*
- * vi:tabstop=4 shiftwidth=4 expandtab
- */
